--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "my-gatsby-site",
+  "name": "portfolio",
   "version": "1.0.0",
   "private": true,
-  "description": "My Gatsby Site",
-  "author": "Alexandre",
+  "description": "Mon portfolio 2021",
+  "author": "Alexandre Savard",
   "keywords": [
-    "gatsby"
+    "gatsby",
+    "portfolio",
+    "2021",
+    "front-end",
+    "developer"
   ],
   "scripts": {
     "develop": "gatsby develop",
@@ -15,6 +19,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@react-icons/all-files": "^4.1.0",
     "gatsby": "^2.32.3",
     "gatsby-image": "^2.11.0",
     "gatsby-plugin-google-analytics": "^2.11.0",
